# docs/swagger.json
@@ -302,6 +302,53 @@
           }
         }
       }
+    },
+    "/season": {
+      "get": {
+        "produces": [
+          "application/json"
+        ],
+        "tags": [
+          "Season"
+        ],
+        "summary": "Get a list of seasons.",
+        "operationId": "getSeasons",
+        "responses": {
+          "200": {
+            "$ref": "#/responses/GetSeasonsResponse"
+          }
+        }
+      },
+      "post": {
+        "consumes": [
+          "application/json"
+        ],
+        "produces": [
+          "application/json"
+        ],
+        "tags": [
+          "Season"
+        ],
+        "summary": "Create a new Season.",
+        "operationId": "CreateSeason",
+        "parameters": [
+          {
+            "name": "Body",
+            "in": "body",
+            "schema": {
+              "$ref": "#/definitions/PostSeasonRequest"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "$ref": "#/responses/PostSeasonResponse"
+          },
+          "500": {
+            "$ref": "#/responses/ErrorResponse"
+          }
+        }
+      }
     }
   },
   "definitions": {
@@ -415,6 +462,15 @@
       },
       "x-go-package": "_/home/ivan/Work/golang/api/rest/models"
     },
+    "GetSeasonsResponse": {
+      "type": "object",
+      "properties": {
+        "seasons": {
+          "$ref": "#/definitions/SeasonsDTO"
+        }
+      },
+      "x-go-package": "_/home/ivan/Work/golang/api/rest/models"
+    },
     "PostChampionshipRequest": {
       "type": "object",
       "properties": {
@@ -449,6 +505,31 @@
       "properties": {
         "Club": {
           "$ref": "#/definitions/ClubDTO"
+        }
+      },
+      "x-go-package": "_/home/ivan/Work/golang/api/rest/models"
+    },
+    "PostSeasonRequest": {
+      "type": "object",
+      "properties": {
+        "endYear": {
+          "type": "integer",
+          "format": "int64",
+          "x-go-name": "EndYear"
+        },
+        "startYear": {
+          "type": "integer",
+          "format": "int64",
+          "x-go-name": "StartYear"
+        }
+      },
+      "x-go-package": "_/home/ivan/Work/golang/api/rest/models"
+    },
+    "PostSeasonResponse": {
+      "type": "object",
+      "properties": {
+        "Season": {
+          "$ref": "#/definitions/SeasonDTO"
         }
       },
       "x-go-package": "_/home/ivan/Work/golang/api/rest/models"
@@ -500,6 +581,30 @@
         }
       },
       "x-go-package": "_/home/ivan/Work/golang/api/rest/models"
+    },
+    "SeasonDTO": {
+      "type": "object",
+      "properties": {
+        "EndYear": {
+          "type": "integer",
+          "format": "int64"
+        },
+        "ID": {
+          "type": "string"
+        },
+        "StartYear": {
+          "type": "integer",
+          "format": "int64"
+        }
+      },
+      "x-go-package": "_/home/ivan/Work/golang/api/rest/models"
+    },
+    "SeasonsDTO": {
+      "type": "array",
+      "items": {
+        "$ref": "#/definitions/SeasonDTO"
+      },
+      "x-go-package": "_/home/ivan/Work/golang/api/rest/models"
     }
   },
   "responses": {
@@ -533,6 +638,12 @@
         "$ref": "#/definitions/GetClubsResponse"
       }
     },
+    "GetSeasonsResponse": {
+      "description": "List of Seasons response.",
+      "schema": {
+        "$ref": "#/definitions/GetSeasonsResponse"
+      }
+    },
     "PostChampionshipResponse": {
       "description": "Update Championship response",
       "schema": {
@@ -543,6 +654,12 @@
       "description": "Update Club response",
       "schema": {
         "$ref": "#/definitions/PutClubResponse"
+      }
+    },
+    "PostSeasonResponse": {
+      "description": "Create Season response",
+      "schema": {
+        "$ref": "#/definitions/PostSeasonResponse"
       }
     }
   }
